--- a/index.html
+++ b/index.html
@@ -134,10 +134,8 @@
             <li value="*">IT Trainings: C++, Java, IOT, Android, .NET, Cloud Computing, Python, Tally, SAP, Web design, Mobility, Data
               Science.
             </li>
-            <li value="*">Non IT Trainings: Medical MR, Automobile Sales process, Financial Planning </li>
+            <li value="*">Non IT Trainings: Automobile Sales process, Financial Planning </li>
             <li value="*">Personality Development: Spoken English, Public Speaking, Aptitude Developmet, Mock test and Interview preparation</li>
-            <li value="*">Engineerig Students: We provide comprehensive technical as well as personality development oriented training
-              to get jobs through campus/off campus recruitment process.</li>
             <li value="*">Engineerig Students: We provide comprehensive technical as well as personality development oriented training
               to get jobs through campus/off campus recruitment process.</li>
             <li value="*">Corporate Training: We organize IT and ERP trainings for Industry users.</li>
