--- a/index.html
+++ b/index.html
@@ -131,10 +131,14 @@
           <p> Following trainings we provide/arrange for our students</p>
 
           <ol class="ui list">
-            <li value="*">IT Trainings: C++, Java, IOT, Android, .NET, Cloud Computing, Python, Tally, SAP, Web design, Mobility, Data
+            <li value="*">IT Trainings (Fundamentals): C++, Java, .NET, Python, Web Design Fundamentals.
+            </li>
+            <li value="*">IT Trainings (Advance): IOT, Android, Cloud Computing (AWS), Web Design Advance (AngularJS, React), Mobile App Development (Hybrid/Native), Data
               Science.
             </li>
-            <li value="*">Non IT Trainings: Automobile Sales process, Financial Planning </li>
+            <li value="*">IT Trainings (Package Solutions): Tally, SAP.
+            </li>
+            <li value="*">Non IT Trainings: Financial Planning </li>
             <li value="*">Personality Development: Spoken English, Public Speaking, Aptitude Developmet, Mock test and Interview preparation</li>
             <li value="*">Engineerig Students: We provide comprehensive technical as well as personality development oriented training
               to get jobs through campus/off campus recruitment process.</li>
